# SIO

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: Doxyfile.in  meson.build
examples/: meson.build
include/: sio.h  sio.hpp
include/sio/: buf.h  context.h  err.h  platform.h  stream.h
include/sio/aux/: addr.h  dir.h  dns.h  fs.h  thread.h
src/: buf.c  err.c  sio.c  stream.c
src/aux/: addr.c  fs.c  thread.c
src/stream/: file.c  memory.c  signal.c  sock.c  timer.c
tests/: aux_addr.c  aux_thread.c  buf.c  meson.build  stream.c  stream_file.c  stream_memory.c  stream_signal.c  stream_socket.c  stream_timer.c
