option('build_examples', type : 'boolean', value : true, description : 'Build example programs')
option('build_tests', type : 'boolean', value : true, description : 'Build test suite')
option('build_docs', type : 'boolean', value : true, description : 'Build documentation')
option('install_docs', type : 'boolean', value : false, description : 'Install documentation')
option('enable_io_uring', type : 'boolean', value : true, description : 'Enable io_uring support on Linux when available')
option('enable_zero_copy', type : 'boolean', value : true, description : 'Enable zero-copy operations when available')
option('enable_async_file_io', type : 'boolean', value : true, description : 'Enable asynchronous file I/O when available')
option('enable_mmap', type : 'boolean', value : true, description : 'Enable memory-mapped I/O when available')
option('enable_scatter_gather', type : 'boolean', value : true, description : 'Enable scatter-gather I/O operations')